[package]
name = "slog-json"
version = "2.4.0"
edition = "2018"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "JSON drain for slog-rs"
keywords = ["slog", "logging", "json"]
license = "MPL-2.0"
documentation = "https://docs.rs/slog-json"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/json"
readme = "README.md"

[features]
nested-values = ["erased-serde", "slog/nested-values"]
dynamic-keys = ["slog/dynamic-keys"]
default = []

[dependencies]
slog = { version = "2.1.1" }
serde_json = "1"
serde = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
erased-serde = {version = "0.3", optional = true }

[dev-dependencies]
slog-async = "2"

[package.metadata.docs.rs]
features = ["nested-values", "dynamic-keys"]
